<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel Info</string>
    <string name="menu_action_clear">Clear</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_history">History</string>
    <string name="string_how_much_fuel">How much fuel?</string>
    <string name="string_currency">€</string>
    <string name="string_volUnit">" Litres"</string>
    <string name="string_fuel_price">Fuel price?</string>
    <string name="string_euro_per_l">€/L</string>
    <string name="money_hint">50</string>
    <string name="price_hint">1.259</string>
    <string name="fuelDescription">Write the desired amount in Euro(€) and the price of
        							fuel, to calculate the fuel amount in litres(L).</string>
    <string name="btn_string_next">Next ></string>
    <string name="title_activity_consumption">Fuel Info</string>
    <string name="enter_average_consumption">Enter below the average consumption of your vehicle.</string>
    <string name="consumption_hint">8</string>
    <string name="l_100km">L/100km</string>
    <string name="toastEmptyMoney">Money can\'t be empty</string>
    <string name="toastEmptyPrice">Price can\'t be empty</string>
    <string name="toastZero">Price or money can\'t be zero</string>
    <string name="toastEmptyLitres">To continue calculate litres</string>
    <string name="toastEmptyConsumption">Consumption can not be empty</string>
    <string name="toastInfoCleared">All the fields are cleared</string>
    <string name="plusOneMilliCent">+0.001</string>
    <string name="plusOneCent">+0.01</string>
    <string name="plusTenCents">+0.1</string>
    <string name="plusOneEuro">+1</string>
    <string name="plusTwo">+2</string>
    <string name="plusFive">+5</string>
    <string name="plusTen">+10</string>
    <string name="plusTwenty">+20</string>
    <string name="btn_string_calculate">Calculate</string>
    <string name="your_vehicle_can_travel">Your vehicle can travel \n\n</string>
    <string name="distanceUnit_with">"km \n\nwith "</string>
    <string name="volUnit_of_fuel">" litres of fuel."</string>
    <string name="date">Date</string>
    <string name="money">Money</string>
    <string name="price">Price</string>
    <string name="litres">Litres</string>
    <string name="title_activity_edit_history">Edit..</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="month">"Month: "</string>
    <string name="year">"Year: "</string>

    <string-array name="months">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>All</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string name="nothing_to_display_for_the_year">"Nothing to display for the year "</string>

    <string name="import_export">Import/Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_string_delete_all">Delete all</string>

</resources>