<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvHeaderDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="#FF808080"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvHeaderEuro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/money"
        android:textColor="#FF808080"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvHeaderPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="#FF808080"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvHeaderLitres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/litres"
        android:textColor="#FF808080"
        android:textSize="12sp" />

</LinearLayout>